# zanshin

./: .arcconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  CMakeLists.txt  COPYING  HACKING  Messages.sh  README.md  REUSE.toml  TODO  actionlistdelegate.cpp  actionlistdelegate.h  actionlisteditor.cpp  actionlisteditor.h  actionlistmodel.cpp  actionlistmodel.h  actionlistview.cpp  actionlistview.h  configdialog.cpp  contextsmodel.cpp  contextsmodel.h  globalmodel.cpp  globalmodel.h  globalsettings.kcfg  globalsettings.kcfgc  librarymodel.cpp  librarymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  projectsmodel.cpp  projectsmodel.h  sidebar.cpp  sidebar.h  (+8 more)
attic/src/: CMakeLists.txt
src/: CMakeLists.txt  aboutdata.cpp  actionduedatedelegate.cpp  actionduedatedelegate.h  actionlistcheckablemodel.cpp  actionlistcheckablemodel.h  actionlistcombobox.cpp  actionlistcombobox.h  actionlistcompletermodel.cpp  actionlistcompletermodel.h  actionlistcompleterview.cpp  actionlistcompleterview.h  actionlistdelegate.cpp  actionlistdelegate.h  actionlisteditor.cpp  actionlisteditor.h  actionlisteditorpage.cpp  actionlisteditorpage.h  actionlistmodel.cpp  actionlistmodel.h  actionlistview.cpp  actionlistview.h  appversion.h  categorymanager.cpp  categorymanager.h  combomodel.cpp  combomodel.h  configdialog.cpp  configdialog.h  configuration.cpp  contextsmodel.cpp  contextsmodel.h  debugwindow.cpp  editorui.rc  globaldefs.h  globalmodel.cpp  globalmodel.h  kdateedit.cpp  kdateedit.h  kdatepickerpopup.h  (+63 more)
src/akonadi/: CMakeLists.txt  akonadiapplicationselectedattribute.cpp  akonadiapplicationselectedattribute.h  akonadiartifactqueries.cpp  akonadiartifactqueries.h  akonadicache.cpp  akonadicache.h  akonadicachingstorage.cpp  akonadicachingstorage.h  akonadicollectionfetchjobinterface.cpp  akonadicollectionfetchjobinterface.h  akonadicollectionsearchjobinterface.cpp  akonadicollectionsearchjobinterface.h  akonadiconfigdialog.cpp  akonadiconfigdialog.h  akonadicontextqueries.cpp  akonadicontextqueries.h  akonadicontextrepository.cpp  akonadicontextrepository.h  akonadidatasourcequeries.cpp  akonadidatasourcequeries.h  akonadidatasourcerepository.cpp  akonadidatasourcerepository.h  akonadiitemfetchjobinterface.cpp  akonadiitemfetchjobinterface.h  akonadilivequeryhelpers.cpp  akonadilivequeryhelpers.h  akonadilivequeryintegrator.cpp  akonadilivequeryintegrator.h  akonadimessaging.cpp  akonadimessaging.h  akonadimessaginginterface.cpp  akonadimessaginginterface.h  akonadimonitorimpl.cpp  akonadimonitorimpl.h  akonadimonitorinterface.cpp  akonadimonitorinterface.h  akonadinotequeries.cpp  akonadinotequeries.h  akonadinoterepository.cpp  (+27 more)
src/app/: CMakeLists.txt  aboutdata.h  collectionconfig.cpp  collectionconfig.h  configdialog.cpp  configdialog.h  debugwindow.cpp  dependencies.cpp  dependencies.h  kontact_plugin.cpp  main.cpp  maincomponent.cpp  maincomponent.h  mainwindow.cpp  mainwindow.h  resourceconfig.cpp  zanshin-next.desktop  zanshin.appdata.xml  zanshin.desktop  zanshin_part.desktop  zanshin_part.rc  zanshin_plugin.desktop
src/core/: CMakeLists.txt  abstractpimitem.h  akonadibaseitem.cpp  akonadibaseitem.h  akonadicollectionitem.cpp  akonadicollectionitem.h  akonadidatastore.cpp  akonadidatastore.h  collectionitem.cpp  collectionitem.h  configuration.h  datastoreinterface.cpp  datastoreinterface.h  incidenceitem.cpp  incidenceitem.h  modelstack.cpp  modelstack.h  note.cpp  note.h  noteitem.cpp  noteitem.h  pimitem.cpp  pimitem.h  pimitemfactory.cpp  pimitemfactory.h  pimitemindex.cpp  pimitemindex.h  pimitemmodel.cpp  pimitemmodel.h  pimitemmonitor.cpp  pimitemmonitor.h  pimitemrelationcache.cpp  pimitemrelationcache.h  pimitemrelationinterface.cpp  pimitemrelations.cpp  pimitemrelations.h  pimitemrelationstrategy.cpp  pimitemrelationstrategy.h  pimitemservices.cpp  pimitemservices.h  (+11 more)
src/domain/: CMakeLists.txt  artifact.cpp  artifact.h  artifactqueries.cpp  artifactqueries.h  artifactrepository.cpp  artifactrepository.h  context.cpp  context.h  contextqueries.cpp  contextqueries.h  contextrepository.cpp  contextrepository.h  datasource.cpp  datasource.h  datasourcequeries.cpp  datasourcequeries.h  datasourcerepository.cpp  datasourcerepository.h  job.cpp  job.h  livequery.h  note.cpp  note.h  notequeries.cpp  notequeries.h  noterepository.cpp  noterepository.h  project.cpp  project.h  projectqueries.cpp  projectqueries.h  projectrepository.cpp  projectrepository.h  queryresult.cpp  queryresult.h  queryresultinterface.cpp  queryresultinterface.h  queryresultprovider.cpp  queryresultprovider.h  (+18 more)
src/gui/: CMakeLists.txt
src/icons/: CMakeLists.txt  sc-apps-zanshin.svgz
src/integration/: CMakeLists.txt  dependencies.cpp  dependencies.h
src/itemview/: CMakeLists.txt  editablewidget.cpp  editablewidget.h  editorwidget.cpp  editorwidget.h  itemcontext.cpp  itemcontext.h  itemmonitor.cpp  itemmonitor.h  itemview.ui  itemviewer.cpp  itemviewer.h  nepomukcontextmodel.cpp  nepomukcontextmodel.h  nepomukcontextview.cpp  nepomukcontextview.h  properties.ui  toolbox.cpp  toolbox.h
src/kontact/: CMakeLists.txt  kontact_plugin.h  part.cpp  part.h  zanshin-next_part.desktop  zanshin-next_part.rc  zanshin-next_plugin.desktop
src/migrator/: CMakeLists.txt  main.cpp  zanshin021migrator.cpp  zanshin021migrator.h
src/pimlibs/: CMakeLists.txt  kdateedit.cpp
src/pimlistview/: CMakeLists.txt  filterproxymodel.cpp  filterproxymodel.h  itemselectorproxy.cpp  itemselectorproxy.h  kidentityproxymodel_copy.cpp  kidentityproxymodel_copy.h  notesortfilterproxymodel.cpp  (+13 more)
tests/: CMakeLists.txt  librarymodeltest.cpp  modelstacktest.cpp  modeltestbase.cpp  modeltestbase.h  parentstructuremodelspec.cpp  pimitemrelationstest.cpp  pimitemtest.cpp  reparentingmodelspec.cpp  selectionproxymodeltest.cpp  sidebarmodelspec.cpp  testdata.ics  todocategoriesmodelspec.cpp  todocategoriesmodeltest.cpp  todocontextsmodelspec.cpp  todoflatmodeltest.cpp  todometadatamodelspec.cpp  todotreemodelspec.cpp  todotreemodeltest.cpp  topicsmodelspec.cpp
(+798 files in other folders)
