# SPDX-FileCopyrightText: 2010 Kevin Ottens <ervin@kde.org> 
# SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL

add_subdirectory(inbox)
add_subdirectory(workday)
add_subdirectory(editing)
add_subdirectory(contexts)
add_subdirectory(datasource)
add_subdirectory(pages)
add_subdirectory(projects)
